fix: deploy to KIE servers and harden Yugabyte setup